include_directories(
		./
		../include
		../../3rdparty/glew/include
		../../3rdparty/libpng
		../../3rdparty/jpeg-6b
		../../3rdparty/zlib
		../../3rdparty/freetype-2.3.5/include
		../../3rdparty/libmad
		../../3rdparty/lua/src
	)

set(SOURCES
		stdafx.cpp
		stdafx.h
		common.h

		gmdatacore/glyph/gmglyphmanager.h
		gmdatacore/glyph/gmglyphmanager.cpp
		gmdatacore/imagereader/gmimagereader.h
		gmdatacore/imagereader/gmimagereader.cpp
		gmdatacore/imagereader/gmimagereader_bmp.h
		gmdatacore/imagereader/gmimagereader_bmp.cpp
		gmdatacore/imagereader/gmimagereader_dds.h
		gmdatacore/imagereader/gmimagereader_dds.cpp
		gmdatacore/imagereader/gmimagereader_jpg.h
		gmdatacore/imagereader/gmimagereader_jpg.cpp
		gmdatacore/imagereader/gmimagereader_png.h
		gmdatacore/imagereader/gmimagereader_png.cpp
		gmdatacore/imagereader/gmimagereader_tga.h
		gmdatacore/imagereader/gmimagereader_tga.cpp
		gmdatacore/modelreader/gmmodelreader.h
		gmdatacore/modelreader/gmmodelreader.cpp
		gmdatacore/modelreader/gmmodelreader_obj.h
		gmdatacore/modelreader/gmmodelreader_obj.cpp
		gmdatacore/gamepackage/gmgamepackage.h
		gmdatacore/gamepackage/gmgamepackage.cpp
		gmdatacore/gamepackage/gmgamepackagehandler.h
		gmdatacore/gamepackage/gmgamepackagehandler.cpp
		gmdatacore/gmimage.h
		gmdatacore/gmimage.cpp
		gmdatacore/imagebuffer.h
		gmdatacore/imagebuffer.cpp
		gmdatacore/gmmodel.h
		gmdatacore/gmmodel.cpp
		gmdatacore/shader.h
		gmdatacore/model.h
		gmdatacore/model.cpp
		gmengine/gmassets.h
		gmengine/gmassets.cpp
		gmengine/gmgameworld.h
		gmengine/gmgameworld.cpp
		gmengine/gmcamera.h
		gmengine/gmcamera.cpp
		gmengine/gmdemogameworld.h
		gmengine/gmdemogameworld.cpp
		gmengine/gameobjects/gmgameobject.h
		gmengine/gameobjects/gmgameobject.cpp
		gmengine/gameobjects/gmparticles.h
		gmengine/gameobjects/gmparticles.cpp
		gmengine/gameobjects/gmspritegameobject.h
		gmengine/gameobjects/gmspritegameobject.cpp
		gmengine/gameobjects/gm2dgameobject.h
		gmengine/gameobjects/gm2dgameobject.cpp
		gmengine/gameobjects/gmcontrolgameobject.h
		gmengine/gameobjects/gmcontrolgameobject.cpp
		gmgl/renders/gmgl_renders_2d.h
		gmgl/renders/gmgl_renders_2d.cpp
		gmgl/renders/gmgl_renders_3d.h
		gmgl/renders/gmgl_renders_3d.cpp
		gmgl/renders/gmgl_renders_particle.h
		gmgl/renders/gmgl_renders_particle.cpp
		gmgl/renders/gmgl_renders_lightpass.h
		gmgl/renders/gmgl_renders_lightpass.cpp
		gmgl/gmglfactory.h
		gmgl/gmglfactory.cpp
		gmgl/gmglgbuffer.h
		gmgl/gmglgbuffer.cpp
		gmgl/gmglglyphmanager.h
		gmgl/gmglglyphmanager.cpp
		gmgl/gmglgraphic_engine.h
		gmgl/gmglgraphic_engine.cpp
		gmgl/gmglmodelpainter.h
		gmgl/gmglmodelpainter.cpp
		gmgl/gmglshaderprogram.h
		gmgl/gmglshaderprogram.cpp
		gmgl/gmgltexture.h
		gmgl/gmgltexture.cpp
		gmgl/shader_constants.h
		gmphysics/gmphysicsworld.h
		gmphysics/gmphysicsworld.cpp
		gmphysics/gmphysicsstructs.h
		gmphysics/collisionobjectfactory.h
		gmphysics/collisionobjectfactory.cpp
		foundation/utilities/tinyxml/tinystr.cpp
		foundation/utilities/tinyxml/tinystr.h
		foundation/utilities/tinyxml/tinyxml.cpp
		foundation/utilities/tinyxml/tinyxml.h
		foundation/utilities/tinyxml/tinyxmlerror.cpp
		foundation/utilities/tinyxml/tinyxmlparser.cpp
		foundation/utilities/utilities.h
		foundation/utilities/utilities.cpp
		foundation/utilities/gmprimitivecreator.h
		foundation/utilities/gmprimitivecreator.cpp
		foundation/utilities/gmcom.h
		foundation/input.h
		foundation/defines.h
		foundation/gmmessages.h
		foundation/debug.h
		foundation/debug.cpp
		foundation/assert.h
		foundation/assert.cpp
		foundation/vector.h
		foundation/memory.h
		foundation/memory.cpp
		foundation/linearmath.h
		foundation/event_enum.h
		foundation/gmobject.h
		foundation/gmobject.cpp
		foundation/gamemachine.h
		foundation/gamemachine.cpp
		foundation/interfaces.h
		foundation/gmstates.h
		foundation/gmstates.cpp
		foundation/gmthreads.h
		foundation/gmthreads.cpp
		foundation/gmprofile.h
		foundation/gmprofile.cpp
		foundation/gmstring.h
		foundation/gmstring.cpp
		gmlua/gmlua.h
		gmlua/gmlua.cpp
		gmlua/gmlua_functions.h
		gmlua/gmlua_functions.cpp
		extensions/bsp/data/gmbsp.h
		extensions/bsp/data/gmbsp.cpp
		extensions/bsp/data/gmbsp_render.h
		extensions/bsp/data/gmbsp_render.cpp
		extensions/bsp/data/gmbsp_shader_loader.h
		extensions/bsp/data/gmbsp_shader_loader.cpp
		extensions/bsp/data/gmbsp_surface_flags.h
		extensions/bsp/data/bsp_model_loader.h
		extensions/bsp/data/bsp_model_loader.cpp
		extensions/bsp/physics/gmbsptrace.h
		extensions/bsp/physics/gmbsptrace.cpp
		extensions/bsp/physics/gmbspphysicsworld.h
		extensions/bsp/physics/gmbspphysicsworld.cpp
		extensions/bsp/physics/gmbspphysicsstructs.h
		extensions/bsp/physics/gmbsppatch.h
		extensions/bsp/physics/gmbsppatch.cpp
		extensions/bsp/physics/gmbspmove.h
		extensions/bsp/physics/gmbspmove.cpp
		extensions/bsp/render/gmbspgameworldprivate.h
		extensions/bsp/render/gmbspgameworldprivate.cpp
		extensions/bsp/render/gmbspgameworld.h
		extensions/bsp/render/gmbspgameworld.cpp
	)

set(WIN32_SOURCES
		foundation/platforms/windows/event.cpp
		foundation/platforms/windows/path.cpp
		foundation/platforms/windows/timer.cpp
	)

if(WIN32)
	list(APPEND SOURCES ${WIN32_SOURCES})
endif(WIN32)

source_group_by_dir(SOURCES)
add_msvc_precompiled_header("stdafx.h" "stdafx.cpp" ${SOURCES})

add_library(${PROJECT_NAME}
		${SOURCES}
	)

if(MSVC)
	set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "/W3" ) 
	set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "/WX" ) 
endif(MSVC)
